# 3DMM-BRender

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
FMT/: loadasc.c  loadbmp.c  loadgif.c  loadiff.c  loadnff.c  loadscr.c  loadtga.c  savescr.c  strcasecmp.c  strcasecmp.h
FW/: FNT3X5.ASM  FNTP4X6.ASM  FNTP7X9.ASM  FW.H  actsupt.c  blockops.c  bswap.c  datafile.c  def_mdl.c  device.h  diag.c  fileops.c  fixed_agnostic.c  font_f_3x5.c  font_p_4x6.c  font_p_7x9.c  fontptrs.c  fw.h  fwiproto.h  fwsetup.c  memloops.asm  memloops.c  ofileops.c  pick.c  pmgenops.c  pmmemops.c  pool.c  prepmesh.c  quat.c  rendsupt.c  resource.c  scale.c
INC/: brbithax.h  brbuiltin.h  brender.h  brhton.h  compiler.h  fixed.h  order.h  zbproto.h  zsproto.h
STD/: stddiag.c  stderr.c  stdfile.c  stdmem.c
ZB/: TI8_PIZ.ASM  TT24_PIZ.ASM  awtm.c  awtm.inc.c  awtmi.inc.c  awtmz.c  bbox.c  decalz.c  dither.c  frcp.c  innera.inc.c  innerp.inc.c  l_piz.c  mesh_agnostic.c  p_piz.c  persp.c  perspi.inc.c  perspz.c  safediv.c  t_piza.asm  t_piza.c  ti8_piz.c  ti8_pizp.c  tt15_piz.asm  tt15_piz.c  tt24_piz.c  zb.fixed.inc  zb.float.inc  zb.h  zbclip.c  zbiproto.h  zbmatl.c  zbmesh.c  zbmeshe.c  zbmeshp.c  zbrendr.c  zbsetup.c
